clusters/overlays/cluster1-copy/quarkus-hello-app/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: acm-quarkus-deployment
  namespace: acm-demo
  labels:
    app: acm-quarkus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acm-quarkus
  template:
    metadata:
      labels:
        app: acm-quarkus
    spec:
      containers:
        - name: quarkus-hello-app
          image: quay.io/naveenkendyala/quarkus-demo-quarkusjvm-hello:v1
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
            - containerPort: 9779
              protocol: TCP
          resources: {}
          imagePullPolicy: IfNotPresent
